[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.3", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0"
dirs = "5.0"
humantime = "2.1"
